--- a/README.html
+++ b/README.html
@@ -151,6 +151,8 @@ source venv/bin/activate  # On Windows, use `venv\Scripts\activate`
 <li><code>--css-path</code>: (<em>Optional</em>) Path to the CSS file. Default is styles.css.</li>
 <li><code>--encoding</code>: (<em>Optional</em>) Encoding of the files. Default is <code>utf-8</code>.</li>
 <li><code>--image-to-base64</code>: (<em>Optional</em>) Convert images to base64 in the HTML. Accepts 1, true, True for enabling, 0, false, False for disabling. Default is 1.</li>
+<li><code>--use-dark-mode</code>: (<em>Optional</em>) Use dark mode in HTML. Accepts 1, true, True for enabling, 0, false, False for disabling. Default is 0.</li>
+<li><code>--dark-mode-css</code>: (<em>Optional</em>) Path to optional CSS file for dark mode.</li>
 </ul>
 <h2>Logging</h2>
 <p>If the Markdown file contains videos, the script will log the presence of these videos and suggest including them for proper functionality in the HTML.</p>
@@ -158,7 +160,7 @@ source venv/bin/activate  # On Windows, use `venv\Scripts\activate`
 <p>This project is licensed under the <a href="./LICENSE">Apache 2.0 license</a>.</p>
     </div>
     <footer>
-        Generated at Friday, 14-Jun-24 19:39:48 UTC
+        Generated at Friday, 14-Jun-24 19:55:22 UTC
     </footer>
 </body>
 </html>
